src/css/style.css
/* ... */
/**
 * Undo the `border-style: none` reset that Normalize applies to images so that
 * our `border-{width}` utilities have the expected effect.
 *
 * The Normalize reset is unnecessary for us since we default the border-width
 * to 0 on all elements.
 *
 * https://github.com/tailwindcss/tailwindcss/issues/362
 */

img {
  border-style: solid;
}

input::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.5;
}

input::-moz-placeholder {
  color: inherit;
  opacity: 0.5;
}

input:-ms-input-placeholder {
  color: inherit;
  opacity: 0.5;
}

input::-ms-input-placeholder {
  color: inherit;
  opacity: 0.5;
}

input::placeholder {
  color: inherit;
  opacity: 0.5;
}

button,
[role="button"] {
  cursor: pointer;
}

h1 {
  font-size: inherit;
  font-weight: inherit;
}

/**
 * Reset links to optimize for opt-in styling instead of
 * opt-out.
 */

a {
  color: inherit;
  text-decoration: inherit;
}

/**
 * Reset form element properties that are easy to forget to
 * style explicitly so you don't inadvertently introduce
 * styles that deviate from your design system. These styles
 * supplement a partial reset that is already applied by
 * normalize.css.
 */

button,
input {
  padding: 0;
  line-height: inherit;
  color: inherit;
}

/**
 * Use the configured 'mono' font family for elements that
 * are expected to be rendered with a monospace font, falling
 * back to the system monospace stack if there is no configured
 * 'mono' font family.
 */

/**
 * Make replaced elements `display: block` by default as that's
 * the behavior you want almost all of the time. Inspired by
 * CSS Remedy, with `svg` added as well.
 *
 * https://github.com/mozdevs/cssremedy/issues/14
 */

img,
svg,
canvas {
  display: block;
  vertical-align: middle;
}

/**
 * Constrain images and videos to the parent width and preserve
 * their instrinsic aspect ratio.
 *
 * https://github.com/mozdevs/cssremedy/issues/14
 */

img {
  max-width: 100%;
  height: auto;
}

/* custom base styles
   ========================================================================== */

/* custom components styles
   ========================================================================== */

.header {
  width: auto;
  height: 5rem;
  background-color: #fff;
  border-width: 0;
  border-bottom-width: 1px;
  border-color: #cbd5e0;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 50;
}

.heading {
  font-family: Abril Fatface, Cambria, Times New Roman, Times, serif;
  font-size: 3rem;
  text-align: center;
  color: #686868;
}

.image-box {
  position: relative;
  margin-top: 6rem;
  margin-bottom: 6rem;
}

.image-box-border {
  width: 83.333333%;
  height: 16rem;
  border-width: 18px;
  border-color: #00ffcc;
  position: absolute;
  z-index: 10;
  bottom: 2rem;
  right: 0;
}

.katie-bouman-image {
  width: 91.666667%;
  max-width: 20rem;
}

.blockquote-1::before {
  font-size: 10rem;
  opacity: 0.1;
  position: absolute;
  content: "\275E";
  bottom: -3rem;
}

.black-hole-image {
}

.blockquote-2::before {
  font-family: Abril Fatface, Cambria, Times New Roman, Times, serif;
  font-size: 6rem;
  line-height: 1;
  opacity: 0.1;
  position: absolute;
  content: "big day";
  top: -3rem;
}

.footer {
  width: auto;
  height: 5rem;
  background-color: #00ffcc;
  border-width: 0;
  border-bottom-width: 1px;
  border-color: #cbd5e0;
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  z-index: 20;
}

.gray-background {
  display: none;
}

.links {
  width: 83.333333%;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.source {
  color: #fff;
  font-weight: 700;
}

.connections {
  width: 8rem;
  display: flex;
  justify-content: space-between;
}

@media (min-width: 768px) {
  .header {
    height: 8rem;
  }

  .heading {
    font-size: 6rem;
    line-height: 1;
  }

  .image-box-border {
    width: 20rem;
    height: 18rem;
    right: -1.5rem;
  }

  .katie-bouman-image,
  .black-hole-image {
    width: auto;
    margin-left: auto;
  }

  .blockquote-1,
  .blockquote-2 {
    max-width: 24rem;
    font-size: 1.125rem;
  }

  .footer {
    height: 6rem;
  }

  .links {
    width: 75%;
  }

  .source {
    font-size: 1.5rem;
  }
}

@media (min-width: 1280px) {
  .header {
    width: 100%;
    margin-bottom: 3rem;
    padding-top: 0.5rem;
    border-color: transparent;
    background-color: transparent;
    position: fixed;
    bottom: 0;
    top: auto;
    z-index: 10;
  }

  .heading {
    font-size: 10rem;
    color: #fff;
    text-shadow: -0.8px -0.8px 0 #686868, 0.8px -0.8px 0 #686868, -0.8px 0.8px 0 #686868,
      0.8px 0.8px 0 #686868;
  }

  .image-box {
    margin-bottom: -2rem;
  }

  .image-box-border {
    width: 24rem;
    height: 24rem;
    right: 0;
    bottom: -4rem;
    z-index: -1;
  }

  .katie-bouman-image,
  .black-hole-image {
    transform: scale(1.3) translate(-5rem, 3rem);
  }

  .blockquote-1,
  .blockquote-2 {
    max-width: 32rem;
    font-size: 1.5rem;
  }

  .blockquote-1::before {
    font-size: 14rem;
  }

  .blockquote-2::before {
    font-size: 8rem;
    top: -5rem;
  }

  .footer {
    height: 100vh;
    width: 6rem;
    position: fixed;
    right: 0;
  }

  .gray-background {
    display: block;
    width: 33.333333%;
    height: 100vh;
    background-color: #686868;
    position: fixed;
    top: 0;
    right: 0;
    z-index: -10;
  }

  .links {
    width: auto;
    height: 90%;
    margin-top: 3rem;
    flex-direction: column;
  }

  .source {
    -webkit-writing-mode: vertical-rl;
    -ms-writing-mode: tb-rl;
    writing-mode: vertical-rl;
  }

  .connections {
    height: 14rem;
    flex-direction: column;
  }
}

.bg-white {
  background-color: #fff;
}

.font-body {
  font-family: Montserrat, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, Arial;
}

.font-medium {
  font-weight: 500;
}

.h-0 {
  height: 0;
}

.m-auto {
  margin: auto;
}

.mx-8 {
  margin-left: 2rem;
  margin-right: 2rem;
}
/* ... */

